--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @booking, url: bookings_path do |f| %>
+<%= form_for @booking, remote: true, url: bookings_path do |f| %>
 
 <%= select :booking, "boat_id", boatsMethod  %>
 <%= select  :booking, "job_id", jobsMethod  %>
