--- a/app/views/bookings/create.js.erb
+++ b/app/views/bookings/create.js.erb
@@ -1,1 +1,3 @@
-$('<%= j render "booking" %>').appendTo('#destroyujs');
+console.log("Hello")
+  $('<%= j render @booking %>').appendTo('.formFields');
+console.log("Howdy")
