--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -17,7 +17,7 @@
     <% end %>
 
 
-    <%= render 'form', booking: @booking %>
+    <%= render 'form', remote: true, booking: @booking %>
 
 
     <table>
