Fixed UJS problems; styling a little wonky

--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -1,6 +1,4 @@
-Boat: <%= @booking.boat.name %><br><br>
-Job: <%= @booking.job.name %><br>
-  <tr><br>
-    <%= link_to 'Destroy', @booking, method: :delete, data: { confirm: 'Are you sure?' } %>
-    <br><br><br><br><br>
-  </tr>
+<p>Boat: <%= @booking.boat.name %></p>
+<p>Job: <%= @booking.job.name %></p>
+<%= link_to 'Destroy', @booking, method: :delete, data: { confirm: 'Are you sure?' } %>
+<br><br><br><br><br>
