--- a/app/views/bookings/create.js.erb
+++ b/app/views/bookings/create.js.erb
@@ -1,5 +1,4 @@
 console.log("Hello")
-
-  $('<%= j render @booking %>').appendTo('.formFields');
-  
+// console.log("boatList", $("#boatList"))
+$("<%= j render @booking %>").appendTo("#boatList");
 console.log("Howdy")
