--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -12,7 +12,8 @@
         <%= f.select :origin, [["Penns Landing, PA, USA","Penns Landing, PA, USA" ], ["Neverland, 2nd Star to the Right", "Neverland, 2nd Star to the Right"], ["San Antonio, TX, USA", "San Antonio, TX, USA"], ["Frankfurt, Germany", "Frankfurt, Germany"], ["Hong Kong, China", "Hong Kong, China"], ["London, Paris", "London, Paris"] ] %>
         <br><br><br>
 
-
+        <%= f.label "Price:" %> <br>
+        <%= f.text_field :cost %> <br><br><br>
 
         <%= f.label "Destination:" %> <br>
         <%= f.select :destination_id, [["Penns Landing, PA, USA","Penns Landing, PA, USA" ], ["Neverland, 2nd Star to the Right", "Neverland, 2nd Star to the Right"], ["San Antonio, TX, USA", "San Antonio, TX, USA"], ["Frankfurt, Germany", "Frankfurt, Germany"], ["Hong Kong, China", "Hong Kong, China"], ["London, Paris", "London, Paris"] ] %>
