--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,35 +2,24 @@
     <p id="notice"><%= notice %></p>
     <h1>Bookings</h1>
     <!-- <%= link_to 'New Booking', new_booking_path %><br><br><br><br> -->
-    <% if current_user %>
 
-      <%= form_for @booking, html: {multipart: true} do |f| %>
-
-      <div class="formField">
-        
-
-      </div>
-
-
-      <br><br>
-      <% end %>
-    <% end %>
 
 
     <%= render 'form', remote: true, booking: @booking %>
-
+<div class="formFields" id="destroyujs">
 
     <table>
       <tbody>
-        <% @bookings.each do |booking| %>
+        <% @bookings.each do |booking|  %>
 
-        <div class="formFields"><br>
+
            <%= @job %> <br><br>
            <%= @boat %>
         </div>
 
+        <div id="boatList" class="formFields"><br>
 
-          <div class="formFields" id="destroyujs">
+
             Boat: <%= booking.boat.name %><br><br>
             Job: <%= booking.job.name %><br>
               <tr><br>
@@ -38,6 +27,7 @@
                 <br><br><br><br><br>
               </tr>
           </div>
+       </div>
 
         <% end %>
       </tbody>
